--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
-# Compiled class file
+.metadata
+bin/
+target/
+tmp/
 *.class
-
-# Log file
+*.tmp
+*.bak
+*.swp
+*~.nib
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+/.settings/
+/.classpath
+/.project
+.loadpath
+.recommenders
+local.properties
 
 # Package Files #
 *.jar
@@ -17,6 +22,12 @@
 *.zip
 *.tar.gz
 *.rar
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# STS (Spring Tool Suite)
+.springBeans
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
